--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -54,6 +54,7 @@ Hello: Привет
 Cabinet: Кабинет
 Add: Создать
 Percles: посылку
+Ship Date: Дата отправкi
 Send_d: Обратиться
 Select type : Выбрать
 Support: В поддержку
