--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -66,6 +66,7 @@ Choise delivery method: Вибрати спосіб доставки
 Addresses Edit: Редагування адреси
 Address Create: Додати адреса
 Region: Штат
+Ship Date: Дата отправкi
 Region Oblast: Область
 Enter region: Введіть область
 District: Район
