fix input validation

--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -247,3 +247,4 @@ Need Paid: Нужно доплатить
 getnewinvoice: Не оплачено. Выставлен дополнительный инвойс
 LiqPay Sucesss: Оплата прошла успешно
 paid: Оплачен - ждет отправки
+Insufficient data for calculation: Недостаточно данных для рассчета
