--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -258,3 +258,4 @@ Need Paid: Потрібно доплатити
 getnewinvoice: Не сплачено. Виставлений додатковий інвойс
 LiqPay Sucesss: Успішна оплата
 paid: Оплачен - ждет отправки
+Insufficient data for calculation: Не вистачає даних для розрахунку
