--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -249,3 +249,4 @@ LiqPay Sucesss: Оплата прошла успешно
 paid: Оплачен - ждет отправки
 Insufficient data for calculation: Недостаточно данных для рассчета
 Write latin only: Пишите только латиницей
+formed: Формируется
