--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -260,3 +260,4 @@ LiqPay Sucesss: Успішна оплата
 paid: Оплачен - ждет отправки
 Insufficient data for calculation: Не вистачає даних для розрахунку
 Write latin only: Пишіть тільки латиницею
+formed: Формується
