--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -39,6 +39,7 @@ Have an account?: Нет аккаунта?
 Signup: Вход
 Authentication: Вход
 PASSWORD RESET: Сброс пароля
+Enter adress: Введите адрес
 Fill with your mail to receive instructions on how to reset your password.: Введите свой Email для получения инструкции для сброса пароля.
 Enter email: Введите Email
 Enter _email: Email
