--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -178,6 +178,7 @@ Send Detail Width: Ширина
 Send Detail Height: Висота
 Email: Ваш e-mail
 Address: Адреса
+Enter adress: Введiть адрес
 Shipping Costs: Вартість відвантаження
 Delivery Status: Статус доставки
 From Country: Країна відправки
