--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -69,7 +69,7 @@ Addresses Edit: Редактирование адреса
 Address Create: Добавить адрес
 Region: Штат
 Region Oblast: Область
-Enter region: Введите область
+Enter region: Провинция
 District: Район
 Region Rayon: Район
 Enter district: Введите район
