--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -68,7 +68,7 @@ Address Create: Додати адреса
 Region: Штат
 Ship Date: Дата отправкi
 Region Oblast: Область
-Enter region: Введіть область
+Enter region: Провінція
 District: Район
 Region Rayon: Район
 Enter district: Введіть район
