--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -251,3 +251,8 @@ paid: Оплачен - ждет отправки
 Insufficient data for calculation: Недостаточно данных для рассчета
 Write latin only: Пишите только латиницей
 formed: Формируется
+PriceForType: Прайс на другие типы доставки
+Track your package1: Track your package
+Track your package2: Track your package
+Download Label: Download Label
+Pay authorize: Pay authorize
