--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -262,3 +262,8 @@ paid: Оплачен - ждет отправки
 Insufficient data for calculation: Не вистачає даних для розрахунку
 Write latin only: Пишіть тільки латиницею
 formed: Формується
+PriceForType: Прайс на другие типы доставки
+Track your package1: Track your package
+Track your package2: Track your package
+Download Label: Download Label
+Pay authorize: Pay authorize
