--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -256,3 +256,4 @@ Track your package1: Track your package
 Track your package2: Track your package
 Download Label: Скачать лейбу
 Pay authorize: Оплатить картой
+economyGermany: Эконом Германия
