--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -257,3 +257,5 @@ Track your package2: Track your package
 Download Label: Скачать лейбу
 Pay authorize: Оплатить картой
 economyGermany: Эконом Германия
+NameUa: Название На Украинском
+NameRu: Название На Русском
