--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -268,3 +268,5 @@ Track your package2: Track your package
 Download Label: Завантажити лейбу
 Pay authorize: Оплатити картою
 economyGermany: Эконом Германия
+NameUa: Назва Українською
+NameRu: Назва Росiйською
