--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -259,3 +259,4 @@ Pay authorize: Оплатить картой
 economyGermany: Эконом Германия
 NameUa: Название На Украинском
 NameRu: Название На Русском
+SettingsAdmin: Настройка
