--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -270,3 +270,4 @@ Pay authorize: Оплатити картою
 economyGermany: Эконом Германия
 NameUa: Назва Українською
 NameRu: Назва Росiйською
+SettingsAdmin: Настройка
