--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -260,3 +260,5 @@ economyGermany: Эконом Германия
 NameUa: Название На Украинском
 NameRu: Название На Русском
 SettingsAdmin: Настройка
+Add Coupon: Добавить купон
+Coupon: Код купона
