--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -271,3 +271,5 @@ economyGermany: Эконом Германия
 NameUa: Назва Українською
 NameRu: Назва Росiйською
 SettingsAdmin: Настройка
+Add Coupon: Додати купон
+Coupon: Код купона
