--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -127,7 +127,7 @@ trackingNumber Nova Pochta: ТН|Нова почта
 NovaPochta: Новая почта
 Tracking Number: Трек номер
 NovaPochta track number: Входящий трек номер
-shipgCost: Стоимость доставки
+shipgCost: Стоимость доставки $
 Edit Order: Редактировать
 descEn: Описание на английском
 descUa: Описание на украинском
