--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -126,7 +126,7 @@ trackingNumber Nova Pochta: ТН | Нова пошта
 NovaPochta: Нова пошта
 NovaPochta track number: Вхідний трек номер
 Tracking Number: Трек номер
-shipgCost: Вартість доставки
+shipgCost: Вартість доставки $
 Edit Order: Редагувати
 descEn: Опис англійською
 descUa: Опис українською
