--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -273,3 +273,4 @@ NameRu: Назва Росiйською
 SettingsExpressPriceAdmin: Прайс на експрес доставку
 Add Coupon: Додати купон
 Coupon: Код купона
+success: Успiшно
