--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -262,3 +262,4 @@ NameRu: Название На Русском
 SettingsExpressPriceAdmin: Прайс на экспресс доставку
 Add Coupon: Добавить купон
 Coupon: Код купона
+success: Успешно
