--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -263,3 +263,4 @@ SettingsExpressPriceAdmin: Прайс на экспресс доставку
 Add Coupon: Добавить купон
 Coupon: Код купона
 success: Успешно
+Successful payment: Оплата прошла успешно
