--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -274,3 +274,4 @@ SettingsExpressPriceAdmin: Прайс на експрес доставку
 Add Coupon: Додати купон
 Coupon: Код купона
 success: Успiшно
+Successful payment: Оплата прошла успішно
