--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -265,3 +265,4 @@ Coupon: Код купона
 success: Успешно
 Successful payment: Оплата прошла успешно
 complit: Отправлен
+text paid: Оплата будет зачислена через несколько минут. Обновите страницу.
