--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -276,3 +276,4 @@ Coupon: Код купона
 success: Успiшно
 Successful payment: Оплата прошла успішно
 complit: Відправлений
+text paid: Оплата буде зарахована через кілька хвилин. Обновіть сторінку.
