--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -274,6 +274,6 @@ SettingsExpressPriceAdmin: Прайс на експрес доставку
 Add Coupon: Додати купон
 Coupon: Код купона
 success: Успiшно
-Successful payment: Оплата прошла успішно
+Successful payment: Оплата пройшла успішно
 complit: Відправлений
 text paid: Оплата буде зарахована через кілька хвилин. Обновіть сторінку.
