--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -266,3 +266,4 @@ success: Успешно
 Successful payment: Оплата прошла успешно
 complit: Отправлен
 text paid: Оплата будет зачислена через несколько минут. Обновите страницу.
+helpstexts: Тексты подсказок
