--- a/translations/messages.ua.yml
+++ b/translations/messages.ua.yml
@@ -277,3 +277,4 @@ success: Успiшно
 Successful payment: Оплата пройшла успішно
 complit: Відправлений
 text paid: Оплата буде зарахована через кілька хвилин. Обновіть сторінку.
+helpstexts: Тексты подсказок
